# langchain-google-classroom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: basic_usage.py
langchain_google_classroom/: __init__.py  _utilities.py  classroom_api.py  document_builder.py  drive_resolver.py  loader.py  normalizer.py
langchain_google_classroom/parsers/: __init__.py  docx_parser.py  image_parser.py  pdf_parser.py  text_parser.py
tests/integration/: test_integration.py
tests/unit/: test_classroom_api.py  test_document_builder.py  test_drive_resolver.py  test_loader.py  test_normalizer.py  test_parsers.py  test_utilities.py
